# lightning-rl

./: .gitignore  .lightningignore  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt
demos/a2c_demo/agent/: actor_critic.py
demos/a2c_demo/buffer/: __init__.py  rollout.py
demos/a2c_demo/configs/: config.yaml
demos/a2c_demo/configs/agent/: default.yaml
demos/a2c_demo/configs/environment/: default.yaml
demos/a2c_demo/configs/model/: default.yaml
demos/a2c_demo/configs/player/: default.yaml
demos/a2c_demo/configs/tester/: default.yaml
demos/a2c_demo/configs/trainer/: default.yaml
demos/a2c_demo/frontend/: frontend.py
demos/a2c_demo/gym/: player.py
demos/a2c_demo/logger/: tensorboard.py
demos/a2c_demo/optimizer/: __init__.py  optimizer.py
demos/a2c_demo/player/: __init__.py  player.py
demos/a2c_demo/trainer/: __init__.py  trainer.py
demos/a2c_demo/utils/: utils.py  viz.py
lightning_rl/: __init__.py
lightning_rl/agent/: actor_critic.py  base.py  ppo.py
lightning_rl/buffer/: __init__.py  rollout.py
lightning_rl/configs/: config.yaml
lightning_rl/configs/agent/: default.yaml  ppo.yaml
lightning_rl/configs/environment/: default.yaml
lightning_rl/configs/hydra/: default.yaml
lightning_rl/configs/model/: default.yaml
lightning_rl/configs/optimizer/: adam.yaml  default.yaml
lightning_rl/configs/player/: default.yaml
lightning_rl/configs/tester/: default.yaml
lightning_rl/configs/trainer/: default.yaml
lightning_rl/frontend/: config.py  frontend.py  gif.py
lightning_rl/logger/: tensorboard.py
lightning_rl/model/: mlp.py
lightning_rl/player/: player.py
lightning_rl/trainer/: trainer.py
lightning_rl/utils/: utils.py  viz.py
